# skillhub-data-collection

./: .dockerignore  .gitignore  Dockerfile  docker-compose.yml  main.py  manual_run.py  pyproject.toml  tasks.py  test_start.py
base_func/: api_skillhub.py  date_tools.py  http_requests.py  mappings.py  rucaptcha_api.py  utils.py  web_session.py
government_support_courses/: parser_support_courses.py
irecommend_feedbacks_parser/: irecomend_requests_parser.py  irecommend_selenium_parser.py
mooc_feedbacks_parser/: mooc_requests_parser.py
otzovik_feedbacks_parser/: otzovik_parser.py  otzovik_selenium_parse.py  otzovik_selenium_parser.py
settings/: browser_config.py  logger_settings.py  mapping.py  urls_config.py
sravnyator_feedback_parser/: sravnyator_requests_parser.py
tutortop_parser/: tutortop_parser.py
two_gis_feedbacks_parser/: two_gis_requests_parser.py
yell_feedbacks_parser/: yell_requests_parser.py
