[tool.poetry]
name = "skillhub_parsers"
version = "0.1.0"
description = ""
authors = ["Andrei Kashin <kashin.andrew@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.25.1"
loguru = "^0.5.3"
beautifulsoup4 = "^4.9.3"
requests-random-user-agent = "^2021.5.29"
lxml = "^4.6.3"
celery = {extras = ["redis"], version = "^5.1.1"}
python-dotenv = "^0.18.0"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
